Fix: user objet properties assigned to token
